--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <title>股倍赚</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="icon" href="http://kyx.chetool.com/favicon.ico" type="image/x-icon">
-<link type="text/css" rel="stylesheet" href="/skin/css/index.css?version=20150717">
+<link type="text/css" rel="stylesheet" href="/index.css">
 <style id="style-1-cropbar-clipper">/* Copyright 2014 Evernote Corporation. All rights reserved. */
 .en-markup-crop-options {
     top: 18px !important;
