--- a/index.html
+++ b/index.html
@@ -74,6 +74,14 @@
 
 <div class="kyx_wrapper">
 <div class="wrapper connectus">
+<h2>合作</h2>
+<p>请发邮件至Peterburgma#meicheshuo.com</p>
+</div><!-- wrapper cooperation -->
+</div><!-- kyx_wrapper -->
+
+
+<div class="kyx_wrapper">
+<div class="wrapper connectus">
 <h2>联系我们</h2>
 <p>
 请发邮件至Peterburgma#meicheshuo.com
@@ -90,13 +98,12 @@
 <div class="kyx_shell">
 <div class="kyx_container">
 <p class="p2">
-<span>@2016 kyx</span><a href="/us.html">联系我们</a><i>|</i><a href="/us.html">合作</a><i>|</i><a href="/us.html">关于我们</a><i>|</i><a href="/us.html">反馈</a>
+<span>@2015 kyx</span><a href="/us.html">联系我们</a><i>|</i><a href="/us.html">合作</a><i>|</i><a href="/us.html">关于我们</a><i>|</i><a href="/us.html">反馈</a>
 </p>
-<p class="p3">@2017 股倍赚 广州市律中投资顾问有限公司 all right reserved</p>
+<p class="p3">2015 kouyuxia.com all right reserved 京ICP备150087774号</p>
 </div><!-- kyx_container -->
 </div><!-- kyx_shell -->
 </div><!-- kyx_foot -->
 </div><!-- kyx -->
-
-
-</body></html>
+</body>
+</html>
