--- a/index.html
+++ b/index.html
@@ -1,22 +1,13 @@
-<html><head>
-<title>股倍赚</title>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<!DOCTYPE html>
+<html>
+<head>
+<title>口语侠_口语侠-雅思_托福_商务英语_少儿英语_专业的口语学习外教平台</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<meta name="keywords" content="口语,口语侠,雅思培训,托福报名,商务英语,少儿英语,外教,四六级,英语四六级口语考试,英语口语练习软件,雅思报名官网,口语培训,一对一口语,英语口语8000句,高考英语口语考试,常用英语口语,口语100,少儿英语口语,商务英语口语900句,英式英语,美式英语,高考英语改革" />
+<meta name="description" content="口语侠提供专业的真人外教一对一日常口语、雅思托福、商务英语、少儿英语、大学考试英语培训等。专注于打造最好的口语学习App，为全国数千万英语学习者提供专业服务，学英语就用口语侠。"/>
 <link rel="icon" href="http://kyx.chetool.com/favicon.ico" type="image/x-icon">
 <link type="text/css" rel="stylesheet" href="/index.css">
-<style id="style-1-cropbar-clipper">/* Copyright 2014 Evernote Corporation. All rights reserved. */
-.en-markup-crop-options {
-    top: 18px !important;
-    left: 50% !important;
-    margin-left: -100px !important;
-    width: 200px !important;
-    border: 2px rgba(255,255,255,.38) solid !important;
-    border-radius: 4px !important;
-}
-
-.en-markup-crop-options div div:first-of-type {
-    margin-left: 0px !important;
-}
-</style></head>
+</head>
 <body>
 <div class="kyx">
 <div class="kyx_head">
@@ -25,6 +16,8 @@
 <h2><img src="/skin/img/logo.png"></h2>
 <ul>
 <li><a href="/index.html">首页</a></li>
+<li class="active"><a href="/us.html">关于我们</a></li>
+<li><a href="http://news.kouyuxia.com" style="text-decoration: none;" target="_blank">口语侠资讯</a></li>
 </ul>
 </div><!-- kyx_container -->
 </div><!-- kyx_shell -->
@@ -38,7 +31,7 @@
 <h2>加入我们</h2>
 <strong>市场推广</strong>
 <p>
-工作内容：推广翻倍赚app获取用户
+工作内容：推广口语侠获取用户
 </p>
 <p>
 要求：
@@ -48,8 +41,8 @@
 <li>精通英语</li>
 <li>本科或以上学历</li>
 </ol>
-<p>地点: 杭州（接收远程）</p>
-<p>简历接收邮箱：hr@gu618.com</p>
+<p>地点: 北京</p>
+<p>简历接收邮箱：Peterburgma#meicheshuo.com</p>
 </div><!-- wrapper joinus -->
 </div><!-- kyx_wrapper -->
 
@@ -57,23 +50,13 @@
 <div class="wrapper aboutus">
 <h2>关于我们</h2>
 <p>
-股倍赚由广州市律中投资顾问有限公司开发的一个面向股民的极速策略配资的股票策略点买软件。
-专注股票策略点买服务，最高可提供8倍资金杠杆。由互联网金融股票证券行业资深人士创办。
-不同寻常的手机股票8倍杠杆策略点买软件，极速配资，杠杆资金零时差到账，股票行情时时呈现、提现0等待，请马上下载注册股倍赚!
+口语侠是国内第一款专注于帮你找外教在线练口语的app。不论何时何地，无需提前预约，只要你想练习口语，即可一键呼叫外教在线陪你练口语。外语的价值在于流利使用，能够流利的使用一门外语会让你在学习和工作中拥有别人不可比拟的优势。It's time to speak fluently and naturally.
 </p>
 </div><!-- wrapper aboutus -->
 </div><!-- kyx_wrapper -->
 
 <div class="kyx_wrapper">
 <div class="wrapper cooperation">
-<h2>合作</h2>
-<p>请发邮件至bd@gu618.com</p>
-</div><!-- wrapper cooperation -->
-</div><!-- kyx_wrapper -->
-
-
-<div class="kyx_wrapper">
-<div class="wrapper connectus">
 <h2>合作</h2>
 <p>请发邮件至Peterburgma#meicheshuo.com</p>
 </div><!-- wrapper cooperation -->
