--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
 <h2>加入我们</h2>
 <strong>市场推广</strong>
 <p>
-工作内容：推广口语侠获取用户
+工作内容：
+</p>
+<p>
+推广口语侠获取用户
 </p>
 <p>
 要求：
@@ -41,7 +44,7 @@
 <li>精通英语</li>
 <li>本科或以上学历</li>
 </ol>
-<p>地点: 北京</p>
+<p>地点: 杭州（可接受远程）</p>
 <p>简历接收邮箱：Peterburgma#meicheshuo.com</p>
 </div><!-- wrapper joinus -->
 </div><!-- kyx_wrapper -->
@@ -50,7 +53,9 @@
 <div class="wrapper aboutus">
 <h2>关于我们</h2>
 <p>
-口语侠是国内第一款专注于帮你找外教在线练口语的app。不论何时何地，无需提前预约，只要你想练习口语，即可一键呼叫外教在线陪你练口语。外语的价值在于流利使用，能够流利的使用一门外语会让你在学习和工作中拥有别人不可比拟的优势。It's time to speak fluently and naturally.
+股倍赚由广州市律中投资顾问有限公司开发的一个面向股民的极速策略配资的股票策略点买软件。
+专注股票策略点买服务，最高可提供8倍资金杠杆。由互联网金融股票证券行业资深人士创办。
+不同寻常的手机股票8倍杠杆策略点买软件，极速配资，杠杆资金零时差到账，股票行情时时呈现、提现0等待，请马上下载注册股倍赚!
 </p>
 </div><!-- wrapper aboutus -->
 </div><!-- kyx_wrapper -->
@@ -81,9 +86,9 @@
 <div class="kyx_shell">
 <div class="kyx_container">
 <p class="p2">
-<span>@2015 kyx</span><a href="/us.html">联系我们</a><i>|</i><a href="/us.html">合作</a><i>|</i><a href="/us.html">关于我们</a><i>|</i><a href="/us.html">反馈</a>
+<span>@2017 股倍赚</span>
 </p>
-<p class="p3">2015 kouyuxia.com all right reserved 京ICP备150087774号</p>
+<p class="p3">2015 广州市律中投资顾问有限公司 all right reserved </p>
 </div><!-- kyx_container -->
 </div><!-- kyx_shell -->
 </div><!-- kyx_foot -->
