--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>口语侠_口语侠-雅思_托福_商务英语_少儿英语_专业的口语学习外教平台</title>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<meta name="keywords" content="口语,口语侠,雅思培训,托福报名,商务英语,少儿英语,外教,四六级,英语四六级口语考试,英语口语练习软件,雅思报名官网,口语培训,一对一口语,英语口语8000句,高考英语口语考试,常用英语口语,口语100,少儿英语口语,商务英语口语900句,英式英语,美式英语,高考英语改革" />
-<meta name="description" content="口语侠提供专业的真人外教一对一日常口语、雅思托福、商务英语、少儿英语、大学考试英语培训等。专注于打造最好的口语学习App，为全国数千万英语学习者提供专业服务，学英语就用口语侠。"/>
+<title>股倍赚</title>
 <link rel="icon" href="http://kyx.chetool.com/favicon.ico" type="image/x-icon">
 <link type="text/css" rel="stylesheet" href="/index.css">
 </head>
@@ -14,11 +11,6 @@
 <div class="kyx_shell">
 <div class="kyx_container">
 <h2><img src="/skin/img/logo.png"></h2>
-<ul>
-<li><a href="/index.html">首页</a></li>
-<li class="active"><a href="/us.html">关于我们</a></li>
-<li><a href="http://news.kouyuxia.com" style="text-decoration: none;" target="_blank">口语侠资讯</a></li>
-</ul>
 </div><!-- kyx_container -->
 </div><!-- kyx_shell -->
 </div><!-- kyx_head -->
@@ -33,9 +25,9 @@
 <p>
 工作内容：
 </p>
-<p>
-推广口语侠获取用户
-</p>
+<ol>
+<li>推广股倍赚获取用户</li>
+</ol>
 <p>
 要求：
 </p>
@@ -44,8 +36,8 @@
 <li>精通英语</li>
 <li>本科或以上学历</li>
 </ol>
-<p>地点: 杭州（可接受远程）</p>
-<p>简历接收邮箱：Peterburgma#meicheshuo.com</p>
+<p>地点: 杭州（可接受远程工作）</p>
+<p>简历接收邮箱：bd@gu618@.com</p>
 </div><!-- wrapper joinus -->
 </div><!-- kyx_wrapper -->
 
@@ -63,7 +55,7 @@
 <div class="kyx_wrapper">
 <div class="wrapper cooperation">
 <h2>合作</h2>
-<p>请发邮件至Peterburgma#meicheshuo.com</p>
+<p>请发邮件至bd@gu618@.com</p>
 </div><!-- wrapper cooperation -->
 </div><!-- kyx_wrapper -->
 
@@ -72,7 +64,7 @@
 <div class="wrapper connectus">
 <h2>联系我们</h2>
 <p>
-请发邮件至Peterburgma#meicheshuo.com
+请发邮件至bd@gu618@.com
 </p>
 </div><!-- wrapper connectus -->
 </div><!-- kyx_wrapper -->
