--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>股倍赚</title>
-<link rel="icon" href="http://kyx.chetool.com/favicon.ico" type="image/x-icon">
+<link rel="icon" href="http://ww1.sinaimg.cn/large/6d563c71gy1fidru13nw3j2074074q32.jpg" type="image/x-icon">
 <link type="text/css" rel="stylesheet" href="/index.css">
 </head>
 <body>
@@ -10,7 +10,7 @@
 <div class="kyx_head">
 <div class="kyx_shell">
 <div class="kyx_container">
-<h2><img src="/skin/img/logo.png"></h2>
+<h2><img src="http://ww1.sinaimg.cn/large/6d563c71gy1fidru13nw3j2074074q32.jpg"></h2>
 </div><!-- kyx_container -->
 </div><!-- kyx_shell -->
 </div><!-- kyx_head -->
@@ -26,14 +26,14 @@
 工作内容：
 </p>
 <ol>
-<li>推广股倍赚获取用户</li>
+<li>推广股倍赚APP获取用户</li>
 </ol>
 <p>
 要求：
 </p>
 <ol>
 <li>相关市场工作经验</li>
-<li>精通英语</li>
+<li>精通app运营推广，有实战经验及案例</li>
 <li>本科或以上学历</li>
 </ol>
 <p>地点: 杭州（可接受远程工作）</p>
@@ -78,9 +78,9 @@
 <div class="kyx_shell">
 <div class="kyx_container">
 <p class="p2">
-<span>@2017 股倍赚</span>
+<span>@2017 股倍赚APP</span>
 </p>
-<p class="p3">2015 广州市律中投资顾问有限公司 all right reserved </p>
+<p class="p3">2015 广州市律中投资顾问有限公司 all right reserved. </p>
 </div><!-- kyx_container -->
 </div><!-- kyx_shell -->
 </div><!-- kyx_foot -->
