--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <li>本科或以上学历</li>
 </ol>
 <p>地点: 杭州（可接受远程工作）</p>
-<p>简历接收邮箱：bd@gu618@.com</p>
+<p>简历接收邮箱：bd@gu618.com</p>
 </div><!-- wrapper joinus -->
 </div><!-- kyx_wrapper -->
 
@@ -55,7 +55,7 @@
 <div class="kyx_wrapper">
 <div class="wrapper cooperation">
 <h2>合作</h2>
-<p>请发邮件至bd@gu618@.com</p>
+<p>请发邮件至bd@gu618.com</p>
 </div><!-- wrapper cooperation -->
 </div><!-- kyx_wrapper -->
 
