--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <div class="wrapper connectus">
 <h2>联系我们</h2>
 <p>
-请发邮件至bd@gu618@.com
+请发邮件至bd@gu618.com
 </p>
 </div><!-- wrapper connectus -->
 </div><!-- kyx_wrapper -->
