--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <li>精通app运营推广，有实战经验及案例</li>
 <li>本科或以上学历</li>
 </ol>
-<p>地点: 杭州（可接受远程工作）</p>
+<p>地点: 接受远程工作</p>
 <p>简历接收邮箱：bd@gu618.com</p>
 </div><!-- wrapper joinus -->
 </div><!-- kyx_wrapper -->
